infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortesia-processor-deployment
  namespace: cinex-apps 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cortesia-processor
  template:
    metadata:
      annotations:
        redeploy-at: "2025-07-13T01:29:20Z"
      labels:
        app: cortesia-processor
    spec:
      containers:
      - name: cortesia-processor
        image: eurival/cortesia-processor-service:latest
        ports:
        - containerPort: 8081
        # --- CORREÇÃO IMPORTANTE ---
        # Carrega todas as chaves do ConfigMap como variáveis de ambiente
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 45
          periodSeconds: 20
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 90
          periodSeconds: 30
          failureThreshold: 3
        resources:
          # Sua configuração de recursos está correta
          requests:
            memory: "256Mi"
            cpu: "500m"
            ephemeral-storage: "256Mi" # Reserva de armazenamento temporário
          limits:
            memory: "512Mi"
            cpu: "1"
            ephemeral-storage: "256Mi"   # Limite de armazenamento temporár
