infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortesia-processor-svc
  namespace: cinex-apps
spec:
  selector:
    app: cortesia-processor
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  type: ClusterIP
